# Credit-Card-Fraud-Detection

./: .dvcignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  dvc.yaml  implementation_plan.md  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  review_and_improvements_report.md
.dvc/: config
.github/workflows/: cd.yaml  ci.yaml
docs/: ARCHITECTURE.md  DATA_SPEC.md  DECISIONS.md  PRD.md  ROADMAP.md  TECH_STACK.md
fraud-detection-mlops/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  requirements.txt
fraud-detection-mlops/.github/workflows/: ci.yml
fraud-detection-mlops/docs/: ARCHITECTURE.md  DATA_SPEC.md  DECISIONS.md  PRD.md  ROADMAP.md  TECH_STACK.md
fraud-detection-mlops/infra/docker/: api.Dockerfile  mlflow.Dockerfile
fraud-detection-mlops/infra/k8s/: README.md
fraud-detection-mlops/tests/: test_placeholder.py
infra/docker/: api.Dockerfile  mlflow.Dockerfile
models/: feature_columns.json
models/encoders/: feature_preprocessor.pkl
reports/evaluation/: test_metrics.json
reports/training/179464f4cfe4471b9bf7497895389c6f/: classification_report.txt  metrics.json
reports/training/2ce7258c97794fb7a6dbd722a5e76d59/: classification_report.txt  metrics.json
reports/training/2e91fb8e458a44759259c15de4c10406/: classification_report.txt  metrics.json  selected_features.json
reports/training/7fbb417dd7e6435aba39fcef8ad24748/: classification_report.txt  metrics.json
reports/training/83d95f4cbb55463fbd5a2df5f83dd8fd/: classification_report.txt  metrics.json
reports/training/8b89fee44d1c4ada97c786cbcac90b52/: metrics.json
reports/training/926566dc87e84a8b9426226906ec56a0/: classification_report.txt  metrics.json
reports/training/9f45a986057146e1ad087ad148be73bb/: classification_report.txt  metrics.json
reports/training/a0a37407fba94b609b7eeb8fed8ba08a/: classification_report.txt  metrics.json  selected_features.json
reports/training/a8307980952443f18be11b2103906715/: classification_report.txt  metrics.json
reports/training/bb34ec0f80f8445782296a2aa880dba8/: metrics.json
reports/training/c6e90b06d09f402f897334ecb8748b3c/: metrics.json  (+1 more)
reports/validation/: ieee_cis_validation.txt  ulb_validation.txt
src/: __init__.py  config.py
src/evaluation/: __init__.py  evaluate.py
src/features/: __init__.py  build_features.py  definitions.py  offline_store.py  online_store.py  preprocessing.py  selection.py
src/ingestion/: __init__.py  consumer.py  download.py  kafka_admin.py  prediction_logger.py  producer.py  split.py
src/monitoring/: __init__.py  drift_monitor.py
src/serving/: __init__.py  app.py  explainer.py  model_loader.py  predictor.py  requirements-serving.txt  schemas.py
src/training/: __init__.py  evaluate.py  promote.py  split.py  train.py  tune_optuna.py
src/validation/: __init__.py  ge_suite.py
tests/: conftest.py
tests/data_validation/: __init__.py  test_schema.py
tests/integration/: test_e2e_stream.py
tests/load/: __init__.py  locustfile.py
tests/unit/: __init__.py  _skops_compat.py  test_config.py  test_consumer.py  test_drift_monitor.py  test_features.py  test_kafka_admin.py  test_parity.py  test_producer.py  test_selection.py  test_serving.py  test_split.py  test_training.py
