[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fraudguard"
version = "0.1.0"
description = "Real-Time Credit Card Fraud Detection Platform"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    # ── Data & ML Core ──────────────────────────────────────────
    "numpy>=1.26,<2.0",
    "pandas>=2.1,<3.0",
    "scikit-learn>=1.4,<2.0",
    "xgboost>=2.0,<3.0",
    "lightgbm>=4.3,<5.0",
    "imbalanced-learn>=0.12,<1.0",

    # ── Explainability ──────────────────────────────────────────
    "shap>=0.45,<1.0",

    # ── Hyperparameter Tuning ───────────────────────────────────
    "optuna>=3.6,<4.0",
    "optuna-integration>=3.6,<4.0",

    # ── Experiment Tracking & Registry ─────────────────────────
    "mlflow>=2.13,<3.0",

    # ── Data Versioning ─────────────────────────────────────────
    "dvc>=3.50,<4.0",
    "dvc-s3>=3.2,<4.0",       # for future S3 remote

    # ── Data Validation ─────────────────────────────────────────
    "great-expectations>=0.18,<1.0",

    # ── Feature Store ───────────────────────────────────────────
    "feast>=0.40,<1.0",

    # ── Serving ─────────────────────────────────────────────────
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.7,<3.0",

    # ── Streaming (Kafka-compatible) ────────────────────────────
    "confluent-kafka>=2.4,<3.0",

    # ── Monitoring & Drift ──────────────────────────────────────
    "evidently>=0.4,<1.0",
    "prometheus-fastapi-instrumentator>=7.0,<8.0",

    # ── Structured Logging ──────────────────────────────────────
    "structlog>=24.1,<25.0",

    # ── Orchestration ───────────────────────────────────────────
    "apache-airflow>=2.9,<3.0",

    # ── Utilities ───────────────────────────────────────────────
    "python-dotenv>=1.0,<2.0",
    "kaggle>=1.6,<2.0",
    "pyarrow>=15.0,<17.0",
    "joblib>=1.4,<2.0",
    "tqdm>=4.66,<5.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "scipy>=1.12,<2.0",
    "redis>=5.0,<6.0",
    "fakeredis>=2.20,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",        # FastAPI TestClient
    "locust>=2.28,<3.0",       # load testing
    "ruff>=0.4,<1.0",
    "black>=24.4,<25.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "ipykernel>=6.29,<7.0",
    "jupyterlab>=4.1,<5.0",
]

[project.scripts]
fraudguard-download  = "src.ingestion.download:main"
fraudguard-validate  = "src.validation.ge_suite:main"
fraudguard-serve     = "src.serving.app:run"

# ── Tool Configuration ──────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/serving/app.py"]
